[package]
name = "h265rs"
version = "0.1.0"
edition = "2021"
description = "H.265 picture formats, partitioning, availability and scan-order primitives"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
jpeg-encoder = "0.7.0"
rust_h265 = "0.1.0"

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
